--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <br>
 
             <br>
-            <a class="order-food" target="_blank" href="https://www.foodpanda.com.bd/">ORDER FOOD</a>
+            <a class="order-food" target="_blank" href="https://www.foodpanda.com">ORDER FOOD</a>
         </div>
         <div class="half-width imgg">
             <img src="images/female/Group 8425.png" alt="">
@@ -68,7 +68,7 @@
             <br>
             <br>
             <br>
-            <a class="contact-me" target="_blank" href="https://www.youtube.com/watch?v=Qe6VVQdF-J4">contact me</a>
+            <a class="contact-me" target="_blank" href="https://www.foodpanda.com/contact/">contact me</a>
         </div>
     </section>
     <div class="thirdpart">
